--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
           <div class="menu-button"></div>
         </label>
         <div class="logo-container">
-          <img class="logo" src="/floridaLogo.png" alt="Florida logo" />
+          <img src="imgs/floridaLogo.png" class="logo" alt="Florida logo" />
         </div>
         <ul class="menu" id="menu">
           <li id="Home">
@@ -135,7 +135,7 @@
           </div>
         </div>
         <div class="tree-container">
-          <img class="tree-img" src="tree.png" alt="tree img" />
+          <img src="imgs/tree.png" class="tree-img" alt="tree img" />
         </div>
       </section>
     </main>
@@ -169,10 +169,10 @@
         <div class="icons-footer-container">
           <a
             href="https://www.facebook.com/p/Flor%C3%ACda-fiorire-in-salute-61555066342532/"
-            ><img src="/square-facebook-brands.svg" alt="facebook logo"
+            ><img src="imgs/square-facebook-brands.svg" alt="facebook logo"
           /></a>
           <a href="https://www.instagram.com/florida_fiorireinsalute/">
-            <img src="/square-instagram-brands.svg" alt="instagram logo" />
+            <img src="imgs/square-instagram-brands.svg" alt="instagram logo" />
           </a>
         </div>
       </div>
