move hamb menu on right corner, add btn paddings

--- a/index.html
+++ b/index.html
@@ -46,6 +46,10 @@
       </nav>
     </header>
 
+    <!-- END OF HEADER -->
+
+    <!-- MAIN SECTION -->
+
     <main class="main-container">
       <h1>Benvenuti a Florìda</h1>
       <section class="">
@@ -137,6 +141,11 @@
         </div>
       </section>
     </main>
+
+    <!-- END OF MAIN -->
+
+    <!-- FOOTER  -->
+
     <footer>
       <div class="heading">
         <h2 class="custom-h2-green">Contatti</h2>
